--- a/templates/konsole/colorscheme.erb
+++ b/templates/konsole/colorscheme.erb
@@ -5,61 +5,70 @@
 Color=<%= @base["00"]["rgb"].join(',') %>
 
 [BackgroundIntense]
-Color=<%= tint(@base["00"]["rgb"], @ratio).join(',') %>
+Color=<%= @base["00"]["rgb"].join(',') %>
 
 [Color0] <%# Black %>
 Color=<%= @base["00"]["rgb"].join(',') %>
 
 [Color0Intense]
-Color=<%= tint(@base["00"]["rgb"], @ratio).join(',') %>
+Color=<%= @base["03"]["rgb"].join(',') %>
+Bold=true
 
 [Color1] <%# Red %>
 Color=<%= @base["08"]["rgb"].join(',') %>
 
 [Color1Intense]
-Color=<%= tint(@base["08"]["rgb"], @ratio).join(',') %>
+Color=<%= @base["08"]["rgb"].join(',') %>
+Bold=true
 
 [Color2] <%# Green %>
 Color=<%= @base["0B"]["rgb"].join(',') %>
 
 [Color2Intense]
-Color=<%= tint(@base["0B"]["rgb"], @ratio).join(',') %>
+Color=<%= @base["0B"]["rgb"].join(',') %>
+Bold=true
 
 [Color3] <%# Yellow %>
 Color=<%= @base["0A"]["rgb"].join(',') %>
 
 [Color3Intense]
-Color=<%= tint(@base["0A"]["rgb"], @ratio).join(',') %>
+Color=<%= @base["0A"]["rgb"].join(',') %>
+Bold=true
 
 [Color4] <%# Blue %>
 Color=<%= @base["0D"]["rgb"].join(',') %>
 
 [Color4Intense]
-Color=<%= tint(@base["0D"]["rgb"], @ratio).join(',') %>
+Color=<%= @base["0D"]["rgb"].join(',') %>
+Bold=true
 
 [Color5] <%# Magenta %>
 Color=<%= @base["0E"]["rgb"].join(',') %>
 
 [Color5Intense]
-Color=<%= tint(@base["0E"]["rgb"], @ratio).join(',') %>
+Color=<%= @base["0E"]["rgb"].join(',') %>
+Bold=true
 
 [Color6] <%# Cyan %>
 Color=<%= @base["0C"]["rgb"].join(',') %>
 
 [Color6Intense]
-Color=<%= tint(@base["0C"]["rgb"], @ratio).join(',') %>
+Color=<%= @base["0C"]["rgb"].join(',') %>
+Bold=true
 
 [Color7] <%# White %>
 Color=<%= @base["05"]["rgb"].join(',') %>
 
 [Color7Intense]
-Color=<%= tint(@base["05"]["rgb"], @ratio).join(',') %>
+Color=<%= @base["07"]["rgb"].join(',') %>
+Bold=true
 
 [Foreground]
 Color=<%= @base["05"]["rgb"].join(',') %>
 
 [ForegroundIntense]
-Color=<%= tint(@base["05"]["rgb"], @ratio).join(',') %>
+Color=<%= @base["05"]["rgb"].join(',') %>
+Bold=true
 
 [General]
 Description=Base16 <%= @scheme %>
